File Name: CHANGES

09/21/2022 FASP 2.8.1:
- Add OpenMP DLL version for Windows;
- Longer output format for residuals;

09/06/2022 FASP 2.8.0:
- Major Change: Need to update all FASP projects;
- Add abstol to KSM functions;
- Prepare for Iterative Refinement;
- Add LONGREAL (long double by default).

09/03/2022 FASP 2.7.9:
- Unify number of digits for output.

08/30/2022 FASP 2.7.8:
- Output stat information from MUMPS;
- Output stat information from UMFPACK;
- Output stat information from PARDISO;
- Test MUMPS, UMFPACK, and PARDISO with problems from DLD and Huawei;
- MUMPS-5.5.1 built with gfortran (does not work with ifort);
- SuiteSparse-5.12.0 built with clang (work with icc/gcc);
- Remove the GUI installation tcl/tk script;
- Update the outdated User Guide!!!

08/28/2022 FASP 2.7.7:
- Add output subroutine for MTX format;
- Test PARDISO and MUMPS;
- Modify the main test example: test.c;
- Fix a coarse level dof size bug: SHORT --> INT;
- Report MUMPS seg fault bug on OSX;
- Update documantation and webpage;
- Fix Doxygen problems.

08/28/2022 FASP 2.7.6:
- Prepare for Huawei's test problems;
- Merge different versions;
- Add MKL support for Mac OS X;
- Add METIS and GKlib support;
- Test linking to MUMPS;
- Test linking to MKL Pardiso;
- Add reading subroutine for Huawei's problems;
- Add support to MUMPS and Pardiso; need to test;
- Add Huawei test problems;
- Add DLD test problems.

08/14/2022 FASP 2.7.5:
- Checking return status of UMFPACK;
- Fixing regression test failure of fasp4blkoil.

07/27/2022 FASP 2.7.4:
- Fix Pardiso and Umfpack timer output;
- Test OpenMP for DLD problem.

04/08/2022 FASP 2.7.3:
- Reading input parameters from a file for fasp4ns project;
- Remove unused variables in UMFPACK interface;
- Update Fortran wrapper for Krylov_AMG;

03/08/2022 FASP 2.7.2:
- Fix a bug due the ISNAN macro not recognized by some compilers;
- Use isnan() to replace ISNAN;
- Fix a TeX problem with Doxygen;
- Fix math.lib linkage problem;